Se mueve de lugar la validacion del CSRF de axios hacias la plantilla base

--- a/suppharmacy/templates/base.html
+++ b/suppharmacy/templates/base.html
@@ -29,7 +29,12 @@
         {% endblock %}
     </div>
     {% endblock body %}
-
+    
+    <!-- CSRF Axios -->
+    <script>
+        axios.defaults.xsrfCookieName = 'csrftoken';
+        axios.defaults.xsrfHeaderName = "X-CSRFTOKEN";
+    </script>
 
     {% block javascript %}{% endblock %}
 
