--- a/suppharmacy/templates/login.html
+++ b/suppharmacy/templates/login.html
@@ -24,6 +24,8 @@
     </div>
 </div>
 
-<script src="{% static 'js/login.js' %}"></script>
+{% endblock %}
 
+{% block javascript %}
+<script src="{% static 'js/login.js' %}"></script>
 {% endblock %}
